--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "eslint-plugin-react": "^7.18.3",
-    "framer-motion": "^3.2.1",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-images": "^1.1.7",
-    "react-images-viewer": "^1.6.2",
-    "react-map-gl": "5.0.0",
+    "react-map-gl": "^6.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "4.0.1",
     "react-slick": "^0.27.13",
-    "react-stack-grid": "^0.7.1",
-    "react-stonecutter": "^0.3.10",
     "sass": "^1.54.4",
+    "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
-    "simple-react-lightbox": "^3.5.2",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
