--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "faker": "5.1.0",
