--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.13",
+    "react-stonecutter": "^0.3.10",
     "sass": "^1.54.4",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "simple-react-lightbox": "^3.6.9-0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
